--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer | Designer | Programmer</p>
+    </header>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>A brief description about yourself.</p>
+    </section>
+    <section id="experience">
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                <h3>Job Title</h3>
+                <p>Company Name</p>
+                <p>Duration</p>
+                <p>Job Description</p>
+            </li>
+            <!-- Add more job experiences as needed -->
+        </ul>
+    </section>
+    <section id="education">
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <h3>Degree</h3>
+                <p>Institution Name</p>
+                <p>Year</p>
+            </li>
+            <!-- Add more education details as needed -->
+        </ul>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Skill 1</li>
+            <li>Skill 2</li>
+            <!-- Add more skills as needed -->
+        </ul>
+    </section>
+    <footer>
+        <p>Contact: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
